--- a/App/App.resx
+++ b/App/App.resx
@@ -117,4 +117,53 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolBtnNew.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolBtnOpen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAGYSURBVHhe7dQ9LgVRAIbhEctRWIJVsA1uomcLCqWCUnH9
+        RW07EitQyCCmkinErea+z5c83TRnzpszmJmZmZmZmZmZmVlk485wcn+2PA970wFsox3e7n79zHF51kfT
+        CWyjCSA+AcQngPgEEJ8A4hNAfAKITwDxLTWA47vzYbU++PHInz3tTzc/bbEvAP/0Mt38NAHUCCBOAHEC
+        iPsVwPfmP2Q7CSBOAHECiBNAnADiBJC2EkDb6fNMAJdvIxEXrzMB3IwjEVfvAki7/hBAmgDiBBAngDgB
+        xAkgTgBxAogTQJwA4gQQJ4A4AcQJIE4AcQKIE0CcAOIEECeAOAHECSBOAHECiBNAnADiBBAngDgBxAkg
+        TgBxAogTQJwA4gQQJ4A4AcQJIE4AcQKIE0CcAOIEECeAOAHECSBOAHECiBNAnADiBBAngDgBxAkgTgBx
+        AogTQJwA4gQQJ4A4AcQJIE4AcQKIE0CcAOIEECeAOAHECSBOAHECiBNAnADiBBAngDgBxAkgTgBxswGY
+        mZmZmZmZmZmZ2VZuGD4BfM4UBkXJ9HMAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="toolBtnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAKCSURBVHhe7ZxRaiMxEAV94/hozgkThBiYjF/bkiNES68K
+        6mMNzXQr9b03AAAAAAAAAAAAAAAAAAAAgLfcv3/++HX59ztnor7fayufzi3F9cgiAVT+M7sM6kgCqKjZ
+        4laoAwmgomYPt0EdRwAVNXt2C9RhBFBRs1eXRx1FABU1q1wadRABVNRs5LKoYwigomYjy5stSXSM+j1y
+        Jur7vbaiZiOPN1uO6yFFAqio2cjzmy3F+YhDAqio2cjrmy3DeelDAqio2Uj1ZktwXbpIABU1Gxm9WXrU
+        0gRQUbORr94sNWphAqio2UgCmIT6fq+tqNlIApiE+n6vrajZSAKYhPp+r62o2UgCmIT6fq+tqNlIApiE
+        +n6vrajZSAKYhPp+r62o2UgC2BB1ayQBbIi6NZIANkTdGkkAG6JujSSADVG3RhLAhqhbIwlgQ9StkQSw
+        IerWSALYEHVrJAFsiLo10joAJAB7CcBcAjCXAMwlAHMJwFwCMJcAzCUAcwnAXAIwlwDMJQBzCcBcAjCX
+        AMwlAHMJwFwCMJcAzCUAcwnAXAIwlwDM3S4A1N4fz+91vJn6vZgatfCrY9yN3oYATCQAcwnAXAIwlwDM
+        JQBzCcBcAjCXAMwlAHMJwFwCMJcAzCUAcwnAXAIwlwDMtQkA+1VvWUyNWvjVMRj4eA7iMDXqmLK0+h0/
+        MzVqYQIYa2rUwgQw1tSohQlgrKlRCxPAWFOjFiaAsaZGLUwAY02NWpgAxpoatTABjDU1amECGGtq1MIE
+        MNbUqIUJYKypUQsTwFhToxYmgLGmRi1MAGNNjVqYAMaaGrUwAYw1PeUPfjb6n7CwXwAAAAAAAAAAAAAA
+        AAAAAIC33G6/8IDLUsxizigAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
