--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="ImgSaveAs" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\ImgSaveAs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImgDbg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgDbg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
