--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -145,4 +145,7 @@
   <data name="ImgDbg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\ImgDbg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dbgBody" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\dbgBody.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
