--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -148,4 +148,7 @@
   <data name="dbgBody" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\dbgBody.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="ImgPick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgPick.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
