--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -151,4 +151,10 @@
   <data name="ImgPick" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\ImgPick.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="keywords" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\keywords.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="WINDOW_SETTINGS_FILE" xml:space="preserve">
+    <value>settings.xml</value>
+  </data>
 </root>
