--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -179,4 +179,10 @@ ivec2 _dbgGeom
 ivec4 _dbgFrag
 uvec3 _dbgComp</value>
   </data>
+  <data name="ImgComment" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgComment.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgUncomment" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgUncomment.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
