Instable commit (sorry)

--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -188,4 +188,7 @@ uvec3 _dbgComp</value>
   <data name="colors" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\colors.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="keywordsGLSL" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\keywordsGLSL.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
