--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -203,4 +203,7 @@ uvec3 _dbgComp</value>
   <data name="Normalize" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Normalize.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="THEME_FILE" xml:space="preserve">
+    <value>DarkTheme.xml</value>
+  </data>
 </root>
