--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -197,4 +197,13 @@ uvec3 _dbgComp</value>
   <data name="Normalize" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Normalize.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImgDbgStepBreakpoint" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgDbgStepBreakpoint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgDbgStepInto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgDbgStepInto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgDbgStepOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgDbgStepOver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
