--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -206,4 +206,7 @@ uvec3 _dbgComp</value>
   <data name="ImgDbgStepOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\ImgDbgStepOver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImgDbgStepBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgDbgStepBack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
