--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -209,4 +209,13 @@ uvec3 _dbgComp</value>
   <data name="ImgDbgStepBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\ImgDbgStepBack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CSHARP_REFERENCES" xml:space="preserve">
+    <value>System.dll
+System.Core.dll
+System.Runtime.dll
+System.Drawing.dll
+System.ValueTuple.dll
+System.Windows.Forms.dll
+OpenTK.dll</value>
+  </data>
 </root>
