--- a/App/Properties/Resources.resx
+++ b/App/Properties/Resources.resx
@@ -217,4 +217,10 @@ System.Drawing.dll
 System.Windows.Forms.dll
 OpenTK.dll</value>
   </data>
+  <data name="ImgAnimate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgAnimate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgPause" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ImgPause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
